fix button alignment and preview iframe height

--- a/app/src/ipview/ipview.scss
+++ b/app/src/ipview/ipview.scss
@@ -66,26 +66,26 @@
 }
 
 .ipview-file {
-  background-color: #fff;
-  padding: $u;
-  overflow: hidden;
+    background-color: #fff;
+    padding: $u;
+    overflow: hidden;
 }
 
 .ipview-file__iframe {
-  width: 100%;
-  height: 50vh;
-  border: none;
+    width: 100%;
+    height: calc(100vh - 235px);
+    border: solid 1px darken($background-color, 10%);
 }
 
 #ipsearchfield {
-  transition: all ease-out 0.3s;
-  background-color: transparent;
-  color: $background-color;
-  font-size: 0.8em;
-  padding: $u*0.25 0;
-  border: none;
-  border-bottom: solid $u*0.125 $main-color;
-  width: 0;
+    transition: all ease-out 0.3s;
+    background-color: transparent;
+    color: $background-color;
+    font-size: 0.8em;
+    padding: $u*0.25 0;
+    border: none;
+    border-bottom: solid $u*0.125 $main-color;
+    width: 0;
 }
 
 #ipsearchfield:focus {
